[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Hud.gd" type="Script" id=1]
[ext_resource path="res://resources/MainTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 0.858824 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.231373 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 87.0
margin_top = 65.0
margin_right = 340.0
margin_bottom = 122.0
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="StageLabel" type="Label" parent="."]
margin_left = 1546.0
margin_top = 78.0
margin_right = 1658.0
margin_bottom = 94.0
rect_scale = Vector2( 2, 2 )
text = "Stage 0"

[node name="HealthLabel" type="Label" parent="."]
margin_left = 77.0
margin_top = 56.0
margin_right = 351.0
margin_bottom = 131.0
text = "100/100"
align = 1
valign = 1
